kubernetes-kompose/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  ports:
  - name: "9080"
    port: 9080
    targetPort: 9080
  selector:
    io.kompose.service: keycloak
status:
  loadBalancer: {}
