kubernetes-kompose/oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: oauth2-proxy
  name: oauth2-proxy
spec:
  ports:
  - name: "4180"
    port: 4180
    targetPort: 4180
  selector:
    io.kompose.service: oauth2-proxy
status:
  loadBalancer: {}
