kubernetes-kompose/httpbin-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: httpbin
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/httpbin: "true"
  podSelector:
    matchLabels:
      io.kompose.network/httpbin: "true"
