kubernetes-kompose/keycloak-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: keycloak
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/keycloak: "true"
  podSelector:
    matchLabels:
      io.kompose.network/keycloak: "true"
